--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^19.1.1",
     "react-router": "^7.9.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
